modulos base wip

--- a/Styn.ApiService/Styn.ApiService.csproj
+++ b/Styn.ApiService/Styn.ApiService.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0-windows</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>4001a9fd-8d57-4b1c-bad2-dcb73d8c03fe</UserSecretsId>
